alterado no codigo url de conexão com o banco, apartir da documentação. Conexão com o banco funcionando

--- a/views/paginas/pokemons/index.ejs
+++ b/views/paginas/pokemons/index.ejs
@@ -1,7 +1,7 @@
-<p>Rota raiz de POkemons</p>
+<p>Rota raiz de Pokemons</p>
 
 <ul>
-    <%  pokemons.array.forEach(pokemon => { %>
-        <li> <%=pokemon.name %> </li>
-    <% }); %>
+    <%  pokemons.forEach(pokemon => { %>
+        <li> <%=pokemon.nome %> </li>
+    <% }) %>
 </ul>
